# mblog

./: pyproject.toml
django_project/: db.sqlite3
django_project/core/: admin.py  models.py  urls.py  views.py
django_project/core/migrations/: 0001_initial.py
django_project/core/templates/core/: index.html
django_project/core/templates/core/include/: base.html
django_project/django_project/: settings.py
