[project]
name = "mblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.*",
    "django-extensions>=4.1",
    "django-taggit>=6.1.0",
    "environs[django]>=14.4.0",
    "gunicorn[gevent]>=23.0.0",
    "ipython>=9.6.0",
    "whitenoise>=6.11.0",
]
